refactor: Rename project to main gold bullion
Update package.json and metadata.json to reflect the new project name and branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-bullionkeep-ai-1",
+  "name": "main-gold-bullion",
   "private": true,
   "version": "0.0.0",
   "type": "module",
